fixes issue causing icons to wrap when edit button clicked

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -46,11 +46,13 @@ button {
   padding: 0.4em 1em;
 }
 
-.input-btn:hover, .clear-btn:hover {
+.input-btn:hover,
+.clear-btn:hover {
   background: #FEFAE0;
 }
 
-.input-btn:active, .clear-btn:active {
+.input-btn:active,
+.clear-btn:active {
   transform: scale(0.9)
 }
 
@@ -72,16 +74,17 @@ button {
 
 .task-form {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-top: 1.1em;
   border-radius: 4px;
-  width: 85%;
+  width: 80vw;
   padding: 1em;
   background: #FEFAE0;
 }
 
 .task-text {
-  flex: 1;
+  width: 75%;
   font-size: 16px;
   font-weight: 300;
 }
@@ -90,7 +93,12 @@ button {
   outline: none;
 }
 
+.task-icon-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 20%;
+}
+
 .task-icon {
-  margin-left: 0.4em;
   cursor: pointer;
 }
